--- a/doc/sprawozdanie.tex
+++ b/doc/sprawozdanie.tex
@@ -24,8 +24,8 @@ I rok, 2 stopień, Informatyka Stosowana, EAIiE}
 
 \textbf{
 Dokument przedstawia wyniki badań nad rozpoznawaniem mówcy za pomocą sieci
-neuronowych feed-forward. Opisano tutaj wszyskie problemy, które nalezało
-rozwiazać, od pozyskania głosu do jego własciwego rozpoznania. Pokazano problem
+neuronowych feed-forward. Opisano tutaj wszystkie problemy, które należało
+rozwiązać, od pozyskania głosu do jego właściwego rozpoznania. Pokazano problem
 wykrywania aktywności mówcy, parametryzacji wypowiedzi za pomocą LPC, budowy 
 sieci neuronowej oraz metod nauki.}
 
@@ -38,13 +38,13 @@ Przedmiotem badań było rozpoznawanie mówcy z użyciem sieci neuronowych typu
 feed-forward. Sam problem rozpoznawania mówcy polega na jednoznacznym wskazaniu
 osoby po jej głosie. Zwykle dzieje się to w 3 krokach: ekstrakcja cech głosu,
 modelowanie tych cech oraz klasyfikacja nowych wypowiedzi i rozpoznanie osoby.
-Do rozpoznwania używa się tych cech zapisu audio która są specyficzne dla
+Do rozpoznawania używa się tych cech zapisu audio która są specyficzne dla
 wybranego człowieka, te cechy odzwierciedlają takie cechy osobowe jak kształt
 i rozmiar ust lub krtani.
 
-Modelowanie i klasyfikacja ekstrachowanych cech w istniejących rozwiazanich
+Modelowanie i klasyfikacja ekstrahowanych cech w istniejących rozwiązaniach
 odbywa się zwykle z użyciem ukrytych modeli Markowa, algorytmów dopasowania
-wzroców, sieci neuronowych, reprezentacji macierzowych czy też drzew
+wzorców, sieci neuronowych, reprezentacji macierzowych czy też drzew
 decyzyjnych.
 
 \section{Proponowane rozwiązanie}
@@ -53,18 +53,18 @@ Przed rozpoczęciem prac nad aplikacją zebraliśmy bazę wypowiedzi 6 osób, pi
 mężczyzn i jedna kobieta, każda
 z nich wypowiada 10 razy swoje imię i nazwisko oraz dwa słowa, długie
 ,,samochód'' oraz krótkie ,,kot''. Dzięki takiej bazie mogliśmy zbadać cechy
-systemu zaleznego i niezależnego od treści wypowiedzi. Niestety nie udało nam
+systemu zależnego i niezależnego od treści wypowiedzi. Niestety nie udało nam
 się wzbogacić bazy o więcej żeńskich głosów, aby móc zbadać ten aspekt
 rozpoznawania mówcy.
 
-Pierwszym etapem było wydzielenie z zapisów konkretnych słow. Potrzebny był do
+Pierwszym etapem było wydzielenie z zapisów konkretnych słów. Potrzebny był do
 tego algorytm wykrywania aktywności mówcy. Aby zrealizować to zadanie z wysoką
-jakością nalezy wziąc pod wuwagę wiele parametrów wypowiedzi. Każdy z mówi z
-różną siłą, która zmienia się równiez podczas wypowiedz. Nasz algorytm został
+jakością należy wziąć pod uwagę wiele parametrów wypowiedzi. Każdy z mówi z
+różną siłą, która zmienia się również podczas wypowiedz. Nasz algorytm został
 bardzo uproszczony ze względu na przeznaczenie rozwiązania. Ponieważ nie była
 wymagana duża dokładność wyznaczenia początku i końca wypowiedzi, wyznaczane
-one były na podstawie energi sygnału. Jesli energia przekroczyła próg uznawano
-to za początek wypowiedzi, jeśli zaś energia wygnału spadła poniżej progu na
+one były na podstawie energii sygnału. Jeśli energia przekroczyła próg uznawano
+to za początek wypowiedzi, jeśli zaś energia sygnału spadła poniżej progu na
 czas dłuży od 100ms, uznawano to za koniec wypowiedzi. Prób był dobierany
 osobno dla każdego wypowiedzianego słowa. Na rysunku \ref{fig:say}
 przedstawiono przykładowy wynik algorytmu na słowie ,,samochód''.
@@ -77,24 +77,24 @@ przedstawiono przykładowy wynik algorytmu na słowie ,,samochód''.
 \end{figure}
 
 Do parametryzacji wypowiedzi użyto współczynników kodowania liniowo predykcyjnego.
-Wrozwiązanie to jest proste: nie wymaga dużo czasu ani pamięci na obliczenia, a
-daje stosunowo bardzo dobre rezultaty.
+Rozwiązanie to jest proste: nie wymaga dużo czasu ani pamięci na obliczenia, a
+daje stosunkowo bardzo dobre rezultaty.
 
-Zotała zaprojektowana sieć feed-forward posiadająca 13 neuronów wejsciowych
-(odpowiadające ilosći współczynników LPC), 19 neuronów warstwy ukrytej oraz 6
+Zmotała zaprojektowana sieć feed-forward posiadająca 13 neuronów wejściowych
+(odpowiadające ilości współczynników LPC), 19 neuronów warstwy ukrytej oraz 6
 neuronów warstwy wyjściowej, co odpowiada ilości osób w bazie. Na rysunku
 \ref{fig:network} pokazano schemat połączeń sieci.
 
 \begin{figure}
     \includegraphics[width=\textwidth]{network}
-    \caption{Schemat połaczeń sieci neuronowej}
+    \caption{Schemat połączeń sieci neuronowej}
     \label{fig:network}
 \end{figure}
 
 \section{Parametryzacja wypowiedzi - ekstrakcja cech}
 
 Jak zostało wcześniej powiedziane cechy wypowiedzi muszą być zależne do
-konkretnych osób (wysokość głosu, lokalizacja formantów). Ponieżej zostanie
+konkretnych osób (wysokość głosu, lokalizacja formantów). Poniżej zostanie
 przedstawione kilka sposób estymacji tych wartości z cyfrowych próbek mowy.
 
 \textbf{Dyskretna Transformata Fouriera} - w przeciwieństwie do sygnału w
@@ -107,16 +107,16 @@ zastosowania sieci neuronowych.
 prosta, a zarazem potężna metoda wyciągania informacji o lokalizacji formantów.
 W skrócie algorytm LPC pozwala znaleźć wektor współczynników opisujących
 widmową obwiednię amplitudy DFT. Współczynniki każdej próbki mogą być wyliczone
-jako liniowa kompinacja współczynników próbki poprzedniej, co pokazuje równanie
+jako liniowa kombinacja współczynników próbki poprzedniej, co pokazuje równanie
 \ref{eqn:lpc}.
 
 \begin{equation}\label{eqn:lpc}
     x(n) - \sum_{k=1}^p a_k x(n-k) + e(n)
 \end{equation}
 
-$p$ współczynników $a_k$ minumalizujacych błąd między sygnałem a jego estymatą
+$p$ współczynników $a_k$ minimalizujących błąd między sygnałem a jego estymatą
 są znane jako współczynniki LPC $p$-tego rzędu. Współczynniki LPC 13-rzędu dla
-słowa ,,samochód'' dla wszystkich osób z bazy znajdują sie na rysunku
+słowa ,,samochód'' dla wszystkich osób z bazy znajdują się na rysunku
 \ref{fig:lpc}.
 
 \begin{figure}
@@ -138,14 +138,14 @@ Cepstrum zmniejsza liniowy trend spectrum oraz usuwa z sygnału informacje o
 mówcy, ta strata informacji przydatna jest w aplikacjach do rozpoznawania
 treści wypowiedzi.
 
-Współczynniki cepstralne można obliczyć z współczynników LPC z uzyciem
+Współczynniki cepstralne można obliczyć z współczynników LPC z użyciem
 zależności \ref{eqn:lpc_cep}.
 
 \begin{equation}\label{eqn:lpc_cep}
     c_i = a_i + \frac{1}{i} \sum_{j=1}^{i-1} (j)a_{i-j} c_j
 \end{equation}
 
-Uzycie współczynników cepstralnych, oprócz tego, że usuwa informacje o mówcy i
+Użycie współczynników cepstralnych, oprócz tego, że usuwa informacje o mówcy i
 daje się wyliczyć z LPC nie przyniosło poprawy rezultatów rozpoznawania,
 dlatego do dalszej analizy wybrano współczynniki LPC 13-tego rzędu.
 
@@ -156,75 +156,75 @@ Sieć nieuronowa użyta w badaniach to typowa, trzywarstwowa sieć neuronowa
 feed-forward. Głównym problemem przy projektowaniu sieć do rozpoznawania mówców
 jest to, że ilość rozpoznawanych osób musi być znana na początku. Ilość
 neuronów warstwie wyjściowej odpowiada rozmiarowi bazy osób, a aktywacja
-wyjścia jest toższama z rozpoznaniem danej osoby.
+wyjścia jest tożsama z rozpoznaniem danej osoby.
 
 Ilość neuronów w warstwie wejściowej odpowiada ilości współczynników LPC, czyli
-13. Jak można zaobserwowac na rusunku \ref{fig:lpc} wyższy rząd współczynników
+13. Jak można zaobserwować na rysunku \ref{fig:lpc} wyższy rząd współczynników
 nie poprawił by rezultatów, bo dla każdej z osób te współczynniki są bardzo
 bliskie zeru.
 
 Ilość neuronów w warstwie ukrytej jest dobrana doświadczalnie. Dla mniejszej
 liczby sieć miała problemy z zapamiętywaniem wzorców, a dla większej liczby nie
-było wydocznej poprawy rezultatów.
+było widocznej poprawy rezultatów.
 
 \section{Testowanie}
 
 W czasie testów skupiono się na dwóch ważnych aspektach tego problemu.
-Rozpoznawanie zalezne/niezalezne od treści słowa oraz sposób uczenia sieci
+Rozpoznawanie zależne/niezależne od treści słowa oraz sposób uczenia sieci
 neuronowej.
 
 \subsection{Zależność od treści}
 
-Nasza baza próbek glosu pozwoliła nam na testy jakości rozpoznawania mówcy w
-przypadku użycia tych samych i róznych słów przez każdą osobę. Imię i nazwisko
+Nasza baza próbek glosuj pozwoliła nam na testy jakości rozpoznawania mówcy w
+przypadku użycia tych samych i różnych słów przez każdą osobę. Imię i nazwisko
 jest inne dla prawie każdej osoby, a pozostałe dwa słowa (,,samochód'' i
 ,,kot'') były wypowiedziane przez każdą osobę z bazy. Wykres \ref{fig:word}
 przedstawia parametry analizy regresji sieci uczonej metodą wstecznej
-propagacij błędu z momentem, dla wszystkich czterech słów.
+propagacji błędu z momentem, dla wszystkich czterech słów.
 
 \begin{figure}[h!]
     \includegraphics[width=\textwidth]{word_network_reggresion}
-    \caption{Wykres parametrów regresji liniowej w zalezności od słowa użytego
+    \caption{Wykres parametrów regresji liniowej w zależności od słowa użytego
     do rozpoznawania}
     \label{fig:word}
 \end{figure}
 
 Najlepszą metodą (parametry opisującą prostą regresji zbliżone do $y=x$, niski
-bład, wysoka korelacja wyjśca i wejścia) okazała się metoda zalezna od treści,
-mianowiście wykorzystanie słowa ,,samochód''. Wykorzystanie słowa ,,kot'',
-pomimo, że jest to również metoda zalezna od treści (która z założenia powinna
+błąd, wysoka korelacja wyjścia i wejścia) okazała się metoda zależna od treści,
+mianowicie wykorzystanie słowa ,,samochód''. Wykorzystanie słowa ,,kot'',
+pomimo, że jest to również metoda zależna od treści (która z założenia powinna
 dawać lepsze rezultaty), jest metodą najgorszą. Duży wpływ na taki wynik może
 mieć to, że słowo ,,kot'' jest bardzo krótkie, co za tym idzie, niesie mało
 informacji.
 
 Dobre efekty dało również wykorzystanie imienia osoby jako analizowanego słowa,
 wpływ na to może mieć to, że żadne z imion się nie powtarza. Wykorzystanie
-nazwiska nie dało zadowlających rezultatów, może to być spowodowane tym, że w
+nazwiska nie dało zadowalających rezultatów, może to być spowodowane tym, że w
 badzie występują 3 osoby o tych samych nazwiskach.
 
 \subsection{Sposób trenowania sieci}
 
 Użyta implementacja trenowanie sieci czterema algorytmami, dodatkowo jeden
-algorytm jest zaimplementowany w wersji wielo wątkowej (na wiele procesorów).
+algorytm jest zaimplementowany w wersji wielowątkowej (na wiele procesorów).
 Dostępne algorytmu uczenia:
 \begin{description}
-    \item[Alg. wstecznej propagacji błedu z momentem] prosta metoda wstecznej
-        propagacji błedu z zachowaniem momentu, co zapobiega na utkwieniu sieci
+    \item[Alg. wstecznej propagacji błędu z momentem] prosta metoda wstecznej
+        propagacji błędu z zachowaniem momentu, co zapobiega na utkwieniu sieci
         w ekstremach lokalnych lub siodłach.
-    \item[Alg. RProp] inna metoda wstecznej propagacji błedu.
-    \item[Gradient sprzężony] - adaptacja metody numerycznego wysnaczania
+    \item[Alg. RProp] inna metoda wstecznej propagacji błędu.
+    \item[Gradient sprzężony] - adaptacja metody numerycznego wyznaczania
         ekstremów dla sieci neuronowych
     \item[Alg. BFGS] - ta metoda jest również zaimplementowana wielowątkowo.
 
 \end{description}
-Podobnie jak w przypadku róznych słów przeprowadzono testy regresji liniowej
-dla każdego sposobu uczenia. Porówanie parametrów znajduje się na wykresie
+Podobnie jak w przypadku różnych słów przeprowadzono testy regresji liniowej
+dla każdego sposobu uczenia. Porównanie parametrów znajduje się na wykresie
 \ref{fig:train}.
 
 
 \begin{figure}[h!]
     \includegraphics[width=\textwidth]{training_network_reggresion}
-    \caption{Wykres parametrów regresji liniowej w zalezności od metody uczenia
+    \caption{Wykres parametrów regresji liniowej w zależności od metody uczenia
     sieci neuronowej}
     \label{fig:train}
 \end{figure}
@@ -240,8 +240,8 @@ mówcy, wyliczanie współczynników LPC. Do zastosowań pozatestowych do uczeni
 sieci użyto algorytmu BFGS i wybrano porównanie na podstawie słowa ,,samochód''.
 
 W rozwoju aplikacji zostało kilka miejsc do uzupełnienia, takich jak
-znalezienie lepszych paramerów opisujących wypowiedź, takich które przechowują
-więcej chech osobowych, czy też sprawdzanie poprawności klasyfikacji z użyciem
+znalezienie lepszych parametrów opisujących wypowiedź, takich które przechowują
+więcej cech osobowych, czy też sprawdzanie poprawności klasyfikacji z użyciem
 większej ilość długich słów.
 
 \section{Bibliografia}
