Docs. Running app

--- a/doc/sprawozdanie.tex
+++ b/doc/sprawozdanie.tex
@@ -254,4 +254,11 @@ większej ilość długich słów.
 
 \section{Dodatek A: Opis aplikacji}
 
+Zostało przygotowanych kilka skryptów które realizują wszystkie zadania
+dotyczące rozpoznawania mówcy. Głównym skryptem jest \verb|network_test.py|.
+Pozwala on na nauczenie sieci (parametr \verb|-a learn|) oraz na próbe
+dopasowania wzorca z bazy (\verb|-a test|) lub nagrania i dopasowania nowego
+wzorca (\verb|-a record|). Aby określić słowo które ma zostać uzyte w
+uczeniu/testowaniu nalezy dodać parametr \verb|-w słowo|.
+
 \end{document}
