Docs. Link to ffnet

--- a/doc/sprawozdanie.tex
+++ b/doc/sprawozdanie.tex
@@ -250,6 +250,8 @@ większej ilość długich słów.
         \url{http://www.neuralnetworks.it/neuralnetspeaker.asp}
     \bibitem{VINING}Automatic Speaker Recognition Using Neural Networks, \emph{Braian
         J. Love, Jennifer Vining, Xuening Sun}, 2004
+    \bibitem{FFNET}Fast-forward neural network library for python,
+        \url{http://ffnet.sourceforge.net/}
 \end{thebibliography}
 
 \section{Dodatek A: Opis aplikacji}
