Added link to github repo

--- a/doc/sprawozdanie.tex
+++ b/doc/sprawozdanie.tex
@@ -252,6 +252,8 @@ większej ilość długich słów.
         J. Love, Jennifer Vining, Xuening Sun}, 2004
     \bibitem{FFNET}Fast-forward neural network library for python,
         \url{http://ffnet.sourceforge.net/}
+    \bibitem{github}Repozytorium zawierające kod źródłowy omawianego projektu,
+        \url{https://github.com/barthez/speaker-recognition-nn}
 \end{thebibliography}
 
 \section{Dodatek A: Opis aplikacji}
