--- a/doc/sprawozdanie.tex
+++ b/doc/sprawozdanie.tex
@@ -80,7 +80,7 @@ Do parametryzacji wypowiedzi użyto współczynników kodowania liniowo predykcy
 Rozwiązanie to jest proste: nie wymaga dużo czasu ani pamięci na obliczenia, a
 daje stosunkowo bardzo dobre rezultaty.
 
-Zmotała zaprojektowana sieć feed-forward posiadająca 13 neuronów wejściowych
+Została zaprojektowana sieć feed-forward posiadająca 13 neuronów wejściowych
 (odpowiadające ilości współczynników LPC), 19 neuronów warstwy ukrytej oraz 6
 neuronów warstwy wyjściowej, co odpowiada ilości osób w bazie. Na rysunku
 \ref{fig:network} pokazano schemat połączeń sieci.
