--- a/doc/sprawozdanie.tex
+++ b/doc/sprawozdanie.tex
@@ -209,7 +209,7 @@ algorytm jest zaimplementowany w wersji wielowątkowej (na wiele procesorów).
 Dostępne algorytmu uczenia:
 \begin{description}
     \item[Alg. wstecznej propagacji błędu z momentem] prosta metoda wstecznej
-        propagacji błędu z zachowaniem momentu, co zapobiega na utkwieniu sieci
+        propagacji błędu z zachowaniem momentu, co zapobiega utkwieniu sieci
         w ekstremach lokalnych lub siodłach.
     \item[Alg. RProp] inna metoda wstecznej propagacji błędu.
     \item[Gradient sprzężony] - adaptacja metody numerycznego wyznaczania
