--- a/doc/ieee_article.tex
+++ b/doc/ieee_article.tex
@@ -210,7 +210,7 @@ algorytm jest zaimplementowany w wersji wielowątkowej (na wiele procesorów).
 Dostępne algorytmu uczenia:
 \begin{itemize}
     \item \textbf{Alg. wstecznej propagacji błędu z momentem} prosta metoda wstecznej
-        propagacji błędu z zachowaniem momentu, co zapobiega na utkwieniu sieci
+        propagacji błędu z zachowaniem momentu, co zapobiega utkwieniu sieci
         w ekstremach lokalnych lub siodłach.
     \item \textbf{Alg. RProp} inna metoda wstecznej propagacji błędu.
     \item \textbf{Gradient sprzężony} - adaptacja metody numerycznego wyznaczania
